(executables
  (names solver_v1 solver_v2 solver_v3 solver_v4 print)
  (public_names sudoku_solver_v1 sudoku_solver_v2 sudoku_solver_v3 solver_v4 print)
  (modules solver_v1 solver_v2 solver_v3 solver_v4 print)
  (package sudoku-solver))

(env
  (release
    (ocamlopt_flags (:standard -O3 -unbox-closures))))
